social media icons styling

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -93,7 +93,7 @@
         width: 60%;
     }
 
-    .author-details-section img {
+    .author-details-section > img {
         border-radius: 10px 10px 0 0;
         width: 100%;
         max-height: 100%;
